# GC-xLSTM

./: .gitignore  LICENSE  README.md  environment_pt220cu121.yaml  pyproject.toml
GC-xLSTM/: prepare_data.py  run.sh  show_gc_util.py  synthetic.py  xlstm_neural_gc.py
GC-xLSTM/configs/: F10T1000.yaml  F10T250.yaml  F10T500.yaml  F40T250.yaml  acatis.yaml  fmri.yaml  mocap-run.yaml  mocap-salsa.yaml  molene.yaml  varT1000.yaml  varT250.yaml  varT500.yaml
GC-xLSTM/configs/lorenz/: F40T1000.yaml  F40T500.yaml
GC-xLSTM/datasets/mocap/all_asfamc/: mocap_time_series_run_angles.npz  mocap_time_series_salsa_angles.npz
GC-xLSTM/datasets/molene/: plot_results.py
GC-xLSTM/datasets/molene/Original_Data/: description.md  readme_radomeh.txt  weather_stations.csv
GC-xLSTM/models/: clstm.py
experiments/: lr_scheduler.py
xlstm/: utils.py  xlstm_block_stack.py
xlstm/blocks/: xlstm_block.py
xlstm/blocks/mlstm/: backends.py  block.py  cell.py  layer.py
xlstm/blocks/slstm/: block.py  cell.py  layer.py
xlstm/blocks/slstm/src/: cuda_init.py
xlstm/blocks/slstm/src/cuda/: lstm_pointwise.cu  slstm.cc  slstm.h  slstm_backward.cu  slstm_backward_cut.cu  slstm_forward.cu  slstm_pointwise.cu  slstm_pointwise.cuh
xlstm/blocks/slstm/src/util/: blas.cu  blas.h  cuda_error.cu  cuda_error.h  device_assert.h  inline_ops.cuh  inline_ops_2bf16.cuh  inline_ops_2fp16.cuh  inline_ops_bf16.cuh  inline_ops_fp16.cuh  inline_print.cuh  support.h
xlstm/blocks/slstm/src/vanilla/: __init__.py  lstm.py  (+1 more)
xlstm/components/: conv.py  feedforward.py  init.py  linear_headwise.py  ln.py  util.py
